# wedding-planner-agent

./: .gitignore  pyproject.toml
src/wedding_planner/: __init__.py  config.py  prompts_loader.py
src/wedding_planner/agents/: __init__.py  base.py  coordinator.py  dj.py  flight.py  travel.py  venue.py
src/wedding_planner/app/: builder.py  coordinator.py  main.py
src/wedding_planner/mcp_clients/: __init__.py  kiwi.py
src/wedding_planner/prompts/: coordinator.md  dj.md  flight.md  travel-agent.md  venue.md
src/wedding_planner/tools/: __init__.py  base.py  playlist_search.py  web_search.py
tests/: conftest.py  test_config.py  test_integration.py  test_prompts_loader.py
tests/agents/: test_base.py  test_dj.py  test_flight.py  test_registry.py  test_travel.py  test_venue.py
tests/app/: test_builder.py  test_coordinator.py
tests/mcp_clients/: test_kiwi.py
tests/tools/: test_base.py  test_playlist_search.py  test_web_search.py
