[project]
name = "wedding-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "DapaMassimo", email = "massimo.dapa96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.15",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langchain-tavily>=0.2.17",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
